--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script>
+  const supabase = supabase.createClient(
+    "YOUR_SUPABASE_URL",
+    "YOUR_ANON_KEY"
+  );
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AGAS LUXE DRIVE | Premium Luxury Automotive Marketplace</title>
@@ -6380,3 +6387,29 @@
     </script>
 </body>
 </html>
+// Replace your current login function with:
+async function handleLogin(e) {
+  e.preventDefault();
+  const email = document.getElementById('login-email').value;
+  const password = document.getElementById('login-password').value;
+
+  try {
+    const response = await fetch('/.netlify/functions/auth-login', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ email, password })
+    });
+
+    const data = await response.json();
+    
+    if (response.ok) {
+      localStorage.setItem('authToken', data.token);
+      localStorage.setItem('currentUser', JSON.stringify(data.user));
+      // ... rest of your success logic
+    } else {
+      showNotification(data.error, 'error');
+    }
+  } catch (error) {
+    showNotification('Login failed. Please try again.', 'error');
+  }
+}
